# feiq-v2

./: .gitattributes  .gitignore  Cargo.toml
docs/: ARCHITECTURE.md  architecture-review-20260719.md
reference/src/: types.rs
reference/src/database/: mod.rs
reference/src/engine/: actor.rs  event_persister.rs  mod.rs
reference/src/engine/handlers/: download_file.rs  mod.rs  scan_subnet.rs  update_identity.rs
reference/src/network/: file_registry.rs  packet_dispatcher.rs  tokio_transport.rs  transport.rs
reference/src/protocol/: command.rs  mod.rs  transcoder.rs
reference/tests/: handler_tests.rs
src/: error.rs  lib.rs  types.rs
src/database/: mod.rs
src/engine/: actor.rs  event_persister.rs  mod.rs
src/engine/handlers/: broadcast_presence.rs  mod.rs  register_shared_file.rs  send_knock.rs  send_message.rs  share_file.rs
src/network/: ack_tracker.rs  discovery.rs  engine.rs  fake_transport.rs  file_registry.rs  mod.rs  packet_dispatcher.rs  packet_io.rs  peer_directory.rs  tokio_transport.rs  transport.rs  validation.rs
src/protocol/: codec.rs  command.rs  message.rs  mod.rs  transcoder.rs
tests/: actor_tests.rs  handler_tests.rs  integration_tests.rs  network_tests.rs
